enumcapsulate/tests/derive-tests/as_variant_ref/fail/enum/struct_variants.err.txt
error: proc-macro derive panicked
 --> /tests/derive-tests/as_variant_ref/fail/enum/struct_variants.rs:5:10
  |
5 | #[derive(AsVariantRef)]
  |          ^^^^^^^^^^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: Error("Only enums with tuple variants can use this derive")
